# Travel-Negotiation-Copilot

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
data/demo/: history.json  policy.json  schedule.json  templates.json  vendors.json
docs/: product-overview.md  releases.md
tests/: test_app_ui.py  test_config.py  test_travel_copilot.py
travel_copilot/: __init__.py  config.py  demo_data.py  drafting.py  exporter.py  models.py  ranking.py  retrieval.py  rules.py  schedule.py  service.py  storage.py
