[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-negotiation-copilot"
version = "0.1.0"
description = "Streamlit POC for AI-assisted sports travel planning and vendor outreach."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.66.0",
  "streamlit>=1.43.0",
]

[tool.setuptools.packages.find]
include = ["travel_copilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
